[team] fix dacalage sidebar/inner-wrap ?

--- a/css/scss/team.scss
+++ b/css/scss/team.scss
@@ -207,6 +207,12 @@
       margin-top: 0 !important;
     }
 
+    .sidebar--right,
+    .sidebar--left,
+    .team-sidebar {
+        margin-top: -20px;
+    }
+
     /*.app__content {
       top: 20px;
     }*/
